<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/registration"
    android:fitsSystemWindows="true"
    tools:context=".second_register">


  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/entername"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
      android:layout_width="300dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="-350dp"
      android:hint="@string/full_name"
      android:textColorHint="@color/white"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        tools:ignore="LabelFor" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/enterdate"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
      android:layout_width="300dp"
      android:layout_height="wrap_content"
      android:hint="@string/date_of_birth"
      android:textColorHint="@color/white"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/entername"
      app:layout_constraintVertical_bias="0.055">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/date"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:inputType="date"
        android:textColor="@color/white"
        tools:ignore="LabelFor" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/status"
      style="@style/ExposedDropdownMenu"
      android:layout_width="300dp"
      android:layout_height="wrap_content"
      android:hint="@string/work_status"
      android:textSize="18sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/enterdate"
      app:layout_constraintVertical_bias="0.052">

    <AutoCompleteTextView
        android:id="@+id/status1"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:inputType="none"
        android:text="@string/select"
        tools:layout_editor_absoluteX="117dp"
        tools:layout_editor_absoluteY="343dp" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/textView2"
      style="@style/ExposedDropdownMenu"
      android:layout_width="300dp"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:hint="@string/select_hobbies"
      android:textColorHint="@color/white"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/status"
      app:layout_constraintVertical_bias="0.094">

    <AutoCompleteTextView
        android:id="@+id/newf"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:inputType="none"
        android:text="@string/select"
        android:textColor="@color/white" />
  </com.google.android.material.textfield.TextInputLayout>

  <Button
      android:id="@+id/registerbt"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/register"
      android:textColor="@color/white"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.84" />

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/okcome"
      style="@style/ExposedDropdownMenu"
      android:layout_width="300dp"
      android:layout_height="wrap_content"
      android:hint="@string/why_"
      android:textColorHint="@color/white"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView2"
      app:layout_constraintVertical_bias="0.093">

    <AutoCompleteTextView
        android:id="@+id/ok"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:text="@string/select"
        android:textColor="@color/white" />
  </com.google.android.material.textfield.TextInputLayout>

  <TextView
      android:id="@+id/clicktologin"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/loginhere"
      android:textColor="@color/white"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.502"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/registerbt"
      app:layout_constraintVertical_bias="0.177" />
</androidx.constraintlayout.widget.ConstraintLayout>