<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/registration"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lgtextview"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:hint="@string/username"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.108">

        <AutoCompleteTextView
            android:id="@+id/username"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:inputType="text"
            android:paddingStart="10dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:id="@+id/lgtextview2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/Password"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lgtextview"
        app:layout_constraintVertical_bias="0.107">

        <AutoCompleteTextView
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:paddingStart="10dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:id="@+id/lgtextview3"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/Confirmpassword"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lgtextview2"
        app:layout_constraintVertical_bias="0.114" >
        <AutoCompleteTextView
            android:id="@+id/confirmpwd"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:paddingStart="10dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lgtextview3"
        app:layout_constraintVertical_bias="0.17" />

    <TextView
        android:id="@+id/clicktologin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginhere"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/next"
        app:layout_constraintVertical_bias="0.177" />

</androidx.constraintlayout.widget.ConstraintLayout>